tín [coffee][product]update giao diện

--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -8,6 +8,7 @@
         * {
             font-style: italic;
         }
+        ​
         .content-left:hover {
             background-color: #D4A373;
             border-radius: 10px;
@@ -17,11 +18,12 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
+​
 <nav class="navbar navbar-expand-sm top-0" style="background-color: #1B2223 ;height: 50px" th:fragment="nav">
     <div class="container-fluid">
         <ul class="navbar-nav w-100">
             <li class="nav-item col-2">
-                <a class="nav-link text-dark float-start" href="#"><img src="/templates/btpnlhuf.png" height="30px"
+                <a class="nav-link text-dark float-start" href="#"><img src="//templates//btpnlhuf.png" height="30px"
                                                                         width="30px"
                                                                         class="rounded mx-auto d-block"></a>
             </li>
@@ -34,6 +36,7 @@
         </ul>
     </div>
 </nav>
+​
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2" style="background-color: #3A4F50" th:fragment="content1">
@@ -55,9 +58,11 @@
             <hr class="d-sm-none">
         </div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
+            ​
         </div>
     </div>
 </div>
+​
 <div class="p-3 text-white text-center top-0" style="background-color: #1B2223" th:fragment="footer">
     <div class="text-center p-0 text-light" style="background-color: #1B2223;">
         © 2023 Coding:
